tests/ui/only_generic.stderr
error: `T` isn't a supported trait. If this is a generic type parameter, at least one trait is required.
 --> tests/ui/only_generic.rs:1:30
  |
1 | #[derive_where::derive_where(T)]
  |                              ^
